Align streaming dedup with unfold aggregator, add LSI MemChunk test coverage
- Match unfold aggregator pattern: only apply MergeIterator+DedupIterator when
  multiple chunks exist (LSI MemChunk inner chunks with overlapping timestamps).
  Single chunks pass through directly via getFirst() without wrapping.
- Add 4 LSI MemChunk dedup tests: partial overlap, dedup-then-aggregate across
  documents, tag-based grouping with dedup, and three inner chunks with
  progressive overlap.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>
Signed-off-by: Ziwen Wan <ziwen.wan@uber.com>